objects/013-fastapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-webapp
  labels:
    name: fastapi-webapp
spec:
  ingressClassName: external-ingress-nginx-class
  rules:
  - host: api.namutest.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: fastapi-webapp
            port: 
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-webapp
spec:
  type: ClusterIP
  selector:
    app: fastapi-webapp
  ports:
  - port: 80
    targetPort: 8080
